<resources>
    <string name="app_name">AlarmMemo</string>

    <!-- activity_memo_list.xml의 문자열 리소스 -->
    <string name="memoList_tv_title">목록</string>
    <string name="memoList_toggle_list">메모 리스트</string>
    <string name="memoList_toggle_setting">설정</string>

    <!--fragment_list.xml 의 문자열 리소스-->
    <string name="memoList_drop_down_sample_text">시간순</string>
    <string name="memoList_drop_down_sample_text_2">제목순</string>

    <!--list_sample.xml 의 문자열 리소스-->
    <string name="memoList_tv_sample_title">메모 제목</string>
    <string name="memoList_tv_sample_date">메모 날짜</string>

    <!--change_name_dialog.xml 의 문자열 리소스-->
    <string name="dialog_et_dialog_change_name">변경할 이름을 입력하세요</string>

    <!--navigation_header.xml 의 문자열 리소스-->
    <string name="drawer_tv_drawer_profile_name">이름</string>

    <!--fragment_profile.xml의 문자열 리소스-->
    <string name="profile_tv_name_title">이름</string>
    <string name="profile_tv_name_text">테스트</string>
    <string name="profile_tv_id_title">아이디</string>
    <string name="profile_tv_id_text">test ID</string>
    <string name="profile_tv_password_change_text">비밀번호 변경</string>
    <string name="profile_tv_logout_text">로그아웃</string>
    <string name="profile_tv_delete_profile_text">회원 탈퇴</string>

    <!---drawer_menu.xml 의 문자열 리소스-->
    <string name="drawer_item_license">라이센스</string>
    <string name="drawer_item_profile">프로필</string>

    <!--fragment_filter_bottom_sheet.xml 의 문자열 리소스-->
    <string name="bottom_sheet_tv_title">필터</string>
    <string name="memoList_toggle_list_2">2개씩 보기</string>
    <string name="memoList_toggle_list_3">3개씩 보기</string>

    <!-- MemoListFragment의 문자열 리소스 -->
    <string name="memoList_add_message">메모가 추가되었습니다.</string>
    <string name="memoList_delete_message">메모가 삭제되었습니다.</string>
    <string name="memoList_dialog_title">메모 삭제</string>
    <string name="memoList_dialog_message">정말로 이 메모를 삭제하시겠습니까?</string>

    <!-- MemoListActivity의 문자열 리소스 -->
    <string name="memoList_back_pressed_message">한 번 더 누르면 종료됩니다.</string>

    <!-- ProfileFragment의 문자열 리소스 -->
    <string name="profile_logout_message">로그 아웃을 완료했습니다.</string>
    <string name="profile_delete_message">회원 탈퇴를 완료했습니다.</string>
    <string name="profile_name_message">이름이 변경되었습니다.</string>
    <string name="profile_password_message">비밀번호가 변경되었습니다.</string>

    <!-- activity_login.xml의 문자열 리소스 -->
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">id</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">로그인</string>
    <string name="action_sign_up">회원가입</string>
    <string name="action_non_sign_in">비회원 로그인</string>
    <string name="action_find_id">아이디 비밀번호 찾기</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="naver_client_id">3wUidjwnTrPwqpBogXOV</string>
    <string name="naver_client_secret">qtgdKyoFy7</string>
    <string name="naver_client_name">AlarmMemo</string>

    <!-- activity_sign_up, activity_reset_pw.xml의 문자열 리소스 -->
    <string name="sign_up_title">회원가입</string>
    <string name="sign_up_subtitle">데이터 백업을 위해 회원가입을 진행해주세요.</string>
    <string name="reset_pw_title">비밀번호 재설정</string>
    <string name="reset_pw_subtitle">이메일 인증 후 비밀번호 재설정을 진행해주세요.</string>
    <string name="email">이메일</string>
    <string name="email_hint">이메일 입력</string>
    <string name="name">이름</string>
    <string name="name_hint">이름 입력 (10자 제한)</string>
    <string name="validation_request">인증 요청</string>
    <string name="password">비밀번호</string>
    <string name="password_hint">비밀번호 입력 (문자, 숫자, 특수문자 포함 8~20자)</string>
    <string name="password_check">비밀번호 확인</string>
    <string name="password_check_hint">비밀번호 재입력</string>
    <string name="sign_up_btn_submit">회원가입</string>
    <string name="sign_up_btn_cancel">가입 취소</string>
    <string name="reset_pw_btn_submit">비밀번호 재설정</string>
    <string name="reset_pw_btn_cancel">설정 취소</string>


    <!-- 밸리데이션 메세지 -->
    <string name="email_invalid_format">이메일 형식이 올바르지 않습니다.</string>
    <string name="email_empty">이메일을 입력해주세요.</string>
    <string name="email_validation_request">이메일 인증 요청을 진행해주세요.</string>
    <string name="email_validation_loading">"이메일 인증 요청을 보내는 중입니다."</string>
    <string name="email_validation_period">인증 유효 기간: %1$s</string>
    <string name="email_validation_expired">인증 유효 기간이 만료되었습니다.</string>
    <string name="email_validation_compeleted">이메일 인증이 완료되었습니다.</string>
    <string name="email_validation_duplicated">이미 사용 중인 이메일입니다.</string>
    <string name="email_validation_error">"이메일 인증 오류가 발생했습니다.</string>

    <string name="name_empty">이름을 입력해 주세요.</string>
    <string name="password_empty">비밀번호를 입력해 주세요.</string>
    <string name="password_invalid_format">비밀번호 형식이 올바르지 않습니다.</string>

    <string name="password_check_error">비밀번호가 일치하지 않습니다.</string>
    <string name="user_finding">유저 정보를 찾는 중입니다.</string>
    <string name="user_social_account">소셜 로그인을 진행해주세요.</string>
    <string name="user_not_found">해당하는 유저를 찾을 수 없습니다.</string>

    <string name="sign_up_submit">회원가입이 완료되었습니다.</string>
    <string name="reset_pw_submit">비밀번호 재설정이 완료되었습니다.</string>

</resources>