<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="40dp"
    android:paddingRight="40dp"
    tools:context=".presentation.signUp.SignUpActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/reset_pw_ll_btn_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textview"
                style="@style/headline_700"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/reset_pw_title"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                style="@style/subtitle_500"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/reset_pw_subtitle"
                android:textColor="@color/dark_gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textview" />

            <TextView
                android:id="@+id/textView3"
                style="@style/body_500"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/email"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />


            <TextView
                android:id="@+id/reset_pw_tv_email_validation"
                style="@style/caption_400"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text=""
                android:textColor="@color/red"
                app:layout_constraintBottom_toBottomOf="@+id/textView3"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toTopOf="@+id/textView3" />


            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3">

                <EditText
                    android:id="@+id/reset_pw_et_email"
                    style="@style/body_400"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="3"
                    android:background="@drawable/edit_text"
                    android:ems="10"
                    android:focusableInTouchMode="true"
                    android:hint="@string/email_hint"
                    android:inputType="text"
                    android:paddingLeft="12dp"
                    android:textColor="@color/dark_gray"
                    android:textColorHint="@color/gray" />

                <Button
                    android:id="@+id/reset_pw_btn_email_verification"
                    style="@style/body_400"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="16dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_outlined_sky_blue"
                    android:text="@string/validation_request"
                    android:textColor="@color/btn_text_color" />


            </LinearLayout>

            <TextView
                android:id="@+id/reset_pw_tv_password_validation"
                style="@style/caption_400"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text=""
                android:textColor="@color/red"
                app:layout_constraintBottom_toBottomOf="@+id/textView4"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                app:layout_constraintTop_toTopOf="@+id/textView4" />

            <TextView
                android:id="@+id/textView4"
                style="@style/body_500"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:text="@string/password"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            <EditText
                android:id="@+id/reset_pw_et_password"
                style="@style/body_400"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/edit_text"
                android:ems="10"
                android:focusableInTouchMode="true"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:maxLength="20"
                android:paddingLeft="12dp"
                android:textColor="@color/dark_gray"
                android:textColorHint="@color/gray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <EditText
                android:id="@+id/reset_pw_et_password_check"
                style="@style/body_400"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/edit_text"
                android:ems="10"
                android:focusableInTouchMode="true"
                android:hint="@string/password_check_hint"
                android:inputType="textPassword"
                android:maxLength="20"
                android:paddingLeft="12dp"
                android:textColor="@color/dark_gray"
                android:textColorHint="@color/gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />


            <TextView
                android:id="@+id/textView5"
                style="@style/body_500"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:text="@string/password_check"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/reset_pw_et_password" />

            <TextView
                android:id="@+id/reset_pw_tv_password_check_validation"
                style="@style/caption_400"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text=""
                android:textColor="@color/red"
                app:layout_constraintBottom_toBottomOf="@+id/textView5"
                app:layout_constraintStart_toEndOf="@+id/textView5"
                app:layout_constraintTop_toTopOf="@+id/textView5" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/reset_pw_ll_btn_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/reset_pw_btn_submit"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/signup_selector"
            android:text="@string/reset_pw_btn_submit"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/reset_pw_btn_cancel"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:background="@drawable/btn_filled_orange"
            android:text="@string/reset_pw_btn_cancel"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
