<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.team5.alarmmemo.presentation.memoList.ProfileFragment">

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/profile_dv_divider_0"
        android:layout_width="0dp"
        android:layout_height="3dp"
        app:dividerColor="@color/light_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile_cl_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_dv_divider_0">

        <TextView
            android:id="@+id/profile_tv_name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/pretendard_bold"
            android:text="@string/profile_tv_name_title"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/profile_tv_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/pretendard_bold"
            android:text="@string/profile_tv_name_text"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/profile_iv_name_change_button"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/profile_iv_name_change_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:src="@drawable/change_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/profile_dv_divider_1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:dividerColor="@color/light_gray"
        app:layout_constraintBottom_toTopOf="@id/profile_cl_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_cl_name" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile_cl_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_cl_name">

        <TextView
            android:id="@+id/profile_tv_id_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/pretendard_bold"
            android:text="@string/profile_tv_id_title"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/profile_tv_id_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="48dp"
            android:fontFamily="@font/pretendard_bold"
            android:text="@string/profile_tv_id_text"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/profile_dv_divider_2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:dividerColor="@color/light_gray"
        app:layout_constraintBottom_toTopOf="@id/profile_cl_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_cl_id" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile_cl_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_cl_id">

        <TextView
            android:id="@+id/profile_tv_password_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/pretendard_bold"
            android:text="@string/profile_tv_password_change_text"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/profile_iv_password_change_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:src="@drawable/change_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/profile_dv_divider_3"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="24dp"
        app:dividerColor="@color/light_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_cl_password" />

    <TextView
        android:id="@+id/profile_logout_button"
        style="@style/subtitle_700"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="15dp"
        android:text="@string/profile_tv_logout_text"
        app:layout_constraintEnd_toStartOf="@id/profile_delete_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_cl_password" />

    <TextView
        android:id="@+id/profile_delete_button"
        style="@style/subtitle_700"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="60dp"
        android:text="@string/profile_tv_delete_profile_text"
        android:textColor="#B1ADAE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/profile_logout_button"
        app:layout_constraintTop_toBottomOf="@+id/profile_cl_password" />

</androidx.constraintlayout.widget.ConstraintLayout>
